--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
